// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computed values > active:bg-[#0536A0] 1`] = `
[
  "&:active { background-color: #0536a0 }",
]
`;

exports[`computed values > active:bg-sky-light 1`] = `
[
  "&:active { background-color: #deeff5 }",
]
`;

exports[`computed values > bg-[#FFF2DE] 1`] = `
[
  "background-color: #fff2de",
]
`;

exports[`computed values > bg-black 1`] = `
[
  "background-color: #333333",
]
`;

exports[`computed values > bg-black/25 1`] = `
[
  "background-color: color-mix(in oklab, #333333 25%, transparent)",
]
`;

exports[`computed values > bg-blue 1`] = `
[
  "background-color: #0047ba",
]
`;

exports[`computed values > bg-blue-dark 1`] = `
[
  "background-color: #002169",
]
`;

exports[`computed values > bg-blue-dark 2`] = `
[
  "background-color: #002169",
]
`;

exports[`computed values > bg-blue-light 1`] = `
[
  "background-color: #bedfec",
]
`;

exports[`computed values > bg-blue-lightest 1`] = `
[
  "background-color: #deeff5",
]
`;

exports[`computed values > bg-gray-dark 1`] = `
[
  "background-color: #595959",
]
`;

exports[`computed values > bg-gray-light 1`] = `
[
  "background-color: #e6e6e6",
]
`;

exports[`computed values > bg-gray-light 2`] = `
[
  "background-color: #e6e6e6",
]
`;

exports[`computed values > bg-gray-lightest 1`] = `
[
  "background-color: #f1f1f1",
]
`;

exports[`computed values > bg-green-dark 1`] = `
[
  "background-color: #00524c",
]
`;

exports[`computed values > bg-green-light 1`] = `
[
  "background-color: #cdece2",
]
`;

exports[`computed values > bg-green-lightest 1`] = `
[
  "background-color: #e6f5f0",
]
`;

exports[`computed values > bg-mint 1`] = `
[
  "background-color: #cdece2",
]
`;

exports[`computed values > bg-mint-light 1`] = `
[
  "background-color: #e6f5f0",
]
`;

exports[`computed values > bg-red 1`] = `
[
  "background-color: #c0385d",
]
`;

exports[`computed values > bg-red-light 1`] = `
[
  "background-color: #faedef",
]
`;

exports[`computed values > bg-red-light 2`] = `
[
  "background-color: #faedef",
]
`;

exports[`computed values > bg-red-light 3`] = `
[
  "background-color: #faedef",
]
`;

exports[`computed values > bg-sky 1`] = `
[
  "background-color: #bedfec",
]
`;

exports[`computed values > bg-sky 2`] = `
[
  "background-color: #bedfec",
]
`;

exports[`computed values > bg-sky-light 1`] = `
[
  "background-color: #deeff5",
]
`;

exports[`computed values > bg-sky-lightest 1`] = `
[
  "background-color: #ebf5f9",
]
`;

exports[`computed values > bg-sky-lightest 2`] = `
[
  "background-color: #ebf5f9",
]
`;

exports[`computed values > bg-white 1`] = `
[
  "background-color: #ffffff",
]
`;

exports[`computed values > border-[#0F9B6E] 1`] = `
[
  "border-color: #0f9b6e",
]
`;

exports[`computed values > border-[#1A7FA7] 1`] = `
[
  "border-color: #1a7fa7",
]
`;

exports[`computed values > border-[#C57C13] 1`] = `
[
  "border-color: #c57c13",
]
`;

exports[`computed values > border-b-black 1`] = `
[
  "border-bottom-color: #333333",
]
`;

exports[`computed values > border-b-blue-dark 1`] = `
[
  "border-bottom-color: #002169",
]
`;

exports[`computed values > border-black 1`] = `
[
  "border-color: #333333",
]
`;

exports[`computed values > border-black 2`] = `
[
  "border-color: #333333",
]
`;

exports[`computed values > border-blue 1`] = `
[
  "border-color: #0047ba",
]
`;

exports[`computed values > border-blue 2`] = `
[
  "border-color: #0047ba",
]
`;

exports[`computed values > border-blue-dark 1`] = `
[
  "border-color: #002169",
]
`;

exports[`computed values > border-blue-dark 2`] = `
[
  "border-color: #002169",
]
`;

exports[`computed values > border-blue-light 1`] = `
[
  "border-color: #bedfec",
]
`;

exports[`computed values > border-gray 1`] = `
[
  "border-color: #818181",
]
`;

exports[`computed values > border-gray-light 1`] = `
[
  "border-color: #e6e6e6",
]
`;

exports[`computed values > border-red 1`] = `
[
  "border-color: #c0385d",
]
`;

exports[`computed values > border-sky 1`] = `
[
  "border-color: #bedfec",
]
`;

exports[`computed values > hover:bg-blue 1`] = `
[
  "@media (hover: hover) &:hover { background-color: #0047ba }",
]
`;

exports[`computed values > outline-red 1`] = `
[
  "outline-color: #c0385d",
]
`;

exports[`computed values > outline-white 1`] = `
[
  "outline-color: #ffffff",
]
`;

exports[`computed values > placeholder-[#727070] 1`] = `
[
  "&::placeholder { color: #727070 }",
]
`;

exports[`computed values > ring-black 1`] = `
[
  "--tw-ring-color: #333333",
]
`;

exports[`computed values > ring-red 1`] = `
[
  "--tw-ring-color: #c0385d",
]
`;

exports[`computed values > shadow-red 1`] = `
[
  "--tw-shadow-color: color-mix(in oklab, #c0385d var(--tw-shadow-alpha), transparent)",
]
`;

exports[`computed values > text-[#727070] 1`] = `
[
  "color: #727070",
]
`;

exports[`computed values > text-black 1`] = `
[
  "color: #333333",
]
`;

exports[`computed values > text-blue-dark 1`] = `
[
  "color: #002169",
]
`;

exports[`computed values > text-blue-light 1`] = `
[
  "color: #bedfec",
]
`;

exports[`computed values > text-gray-dark 1`] = `
[
  "color: #595959",
]
`;

exports[`computed values > text-red 1`] = `
[
  "color: #c0385d",
]
`;

exports[`computed values > text-red 2`] = `
[
  "color: #c0385d",
]
`;

exports[`computed values > text-white 1`] = `
[
  "color: #ffffff",
]
`;

exports[`computed values > text-white 2`] = `
[
  "color: #ffffff",
]
`;

exports[`computed values > text-white 3`] = `
[
  "color: #ffffff",
]
`;

exports[`computed values > the token set matches the snapshot 1`] = `
{
  "--animate-accordion-down": "accordion-down var(--tw-animation-duration,var(--tw-duration,.2s))var(--tw-ease,ease-out)var(--tw-animation-delay,0s)var(--tw-animation-iteration-count,1)var(--tw-animation-direction,normal)var(--tw-animation-fill-mode,none)",
  "--animate-accordion-up": "accordion-up var(--tw-animation-duration,var(--tw-duration,.2s))var(--tw-ease,ease-out)var(--tw-animation-delay,0s)var(--tw-animation-iteration-count,1)var(--tw-animation-direction,normal)var(--tw-animation-fill-mode,none)",
  "--animate-caret-blink": "caret-blink 1.25s ease-out infinite",
  "--animate-collapsible-down": "collapsible-down var(--tw-animation-duration,var(--tw-duration,.2s))var(--tw-ease,ease-out)var(--tw-animation-delay,0s)var(--tw-animation-iteration-count,1)var(--tw-animation-direction,normal)var(--tw-animation-fill-mode,none)",
  "--animate-collapsible-up": "collapsible-up var(--tw-animation-duration,var(--tw-duration,.2s))var(--tw-ease,ease-out)var(--tw-animation-delay,0s)var(--tw-animation-iteration-count,1)var(--tw-animation-direction,normal)var(--tw-animation-fill-mode,none)",
  "--animate-in": "enter var(--tw-animation-duration,var(--tw-duration,.15s))var(--tw-ease,ease)var(--tw-animation-delay,0s)var(--tw-animation-iteration-count,1)var(--tw-animation-direction,normal)var(--tw-animation-fill-mode,none)",
  "--animate-out": "exit var(--tw-animation-duration,var(--tw-duration,.15s))var(--tw-ease,ease)var(--tw-animation-delay,0s)var(--tw-animation-iteration-count,1)var(--tw-animation-direction,normal)var(--tw-animation-fill-mode,none)",
  "--animation-delay-0": "0s",
  "--animation-delay-100": ".1s",
  "--animation-delay-1000": "1s",
  "--animation-delay-150": ".15s",
  "--animation-delay-200": ".2s",
  "--animation-delay-300": ".3s",
  "--animation-delay-500": ".5s",
  "--animation-delay-700": ".7s",
  "--animation-delay-75": "75ms",
  "--animation-direction-alternate": "alternate",
  "--animation-direction-alternate-reverse": "alternate-reverse",
  "--animation-direction-normal": "normal",
  "--animation-direction-reverse": "reverse",
  "--animation-fill-mode-backwards": "backwards",
  "--animation-fill-mode-both": "both",
  "--animation-fill-mode-forwards": "forwards",
  "--animation-fill-mode-none": "none",
  "--animation-repeat-0": "0",
  "--animation-repeat-1": "1",
  "--animation-repeat-infinite": "infinite",
  "--breakpoint-3xl": "108rem",
  "--breakpoint-4xl": "120rem",
  "--color-accent-background-default": "#ffffff",
  "--color-accent-background-tinted": "#f0f9f6",
  "--color-accent-base-active": "#006448",
  "--color-accent-base-contrast-default": "#ffffff",
  "--color-accent-base-contrast-subtle": "#e6f5f0",
  "--color-accent-base-default": "#00524c",
  "--color-accent-base-hover": "#007453",
  "--color-accent-border-default": "#008761",
  "--color-accent-border-strong": "#006448",
  "--color-accent-border-subtle": "#cdece2",
  "--color-accent-surface-active": "#cdece2",
  "--color-accent-surface-default": "#ffffff",
  "--color-accent-surface-hover": "#d7f0e8",
  "--color-accent-surface-tinted": "#e6f5f0",
  "--color-accent-text-default": "#00524c",
  "--color-accent-text-subtle": "#006448",
  "--color-background-default": "#ffffff",
  "--color-background-tinted": "#ebf5f9",
  "--color-base-active": "#00358a",
  "--color-base-contrast-default": "#ffffff",
  "--color-base-contrast-subtle": "#deeff5",
  "--color-base-default": "#002169",
  "--color-base-hover": "#003da0",
  "--color-black": "#333333",
  "--color-blue": "#0047ba",
  "--color-blue-dark": "#002169",
  "--color-blue-light": "#bedfec",
  "--color-blue-lightest": "#deeff5",
  "--color-border-default": "#0047ba",
  "--color-border-strong": "#003da0",
  "--color-border-subtle": "#bedfec",
  "--color-danger-background-default": "#ffffff",
  "--color-danger-background-tinted": "#faedef",
  "--color-danger-base-active": "#8e2945",
  "--color-danger-base-contrast-default": "#ffffff",
  "--color-danger-base-contrast-subtle": "#faedef",
  "--color-danger-base-default": "#c0385d",
  "--color-danger-base-hover": "#a53050",
  "--color-danger-border-default": "#c0385d",
  "--color-danger-border-strong": "#8e2945",
  "--color-danger-border-subtle": "#faedef",
  "--color-danger-surface-active": "#faedef",
  "--color-danger-surface-default": "#ffffff",
  "--color-danger-surface-hover": "#faedef",
  "--color-danger-surface-tinted": "#faedef",
  "--color-danger-text-default": "#8e2945",
  "--color-danger-text-subtle": "#a53050",
  "--color-gray": "#818181",
  "--color-gray-dark": "#595959",
  "--color-gray-light": "#e6e6e6",
  "--color-gray-lightest": "#f1f1f1",
  "--color-green": "#008761",
  "--color-green-dark": "#00524c",
  "--color-green-light": "#cdece2",
  "--color-green-lightest": "#e6f5f0",
  "--color-info-background-default": "#ffffff",
  "--color-info-background-tinted": "#ebf5f9",
  "--color-info-base-active": "#00358a",
  "--color-info-base-contrast-default": "#ffffff",
  "--color-info-base-contrast-subtle": "#deeff5",
  "--color-info-base-default": "#0047ba",
  "--color-info-base-hover": "#003da0",
  "--color-info-border-default": "#0047ba",
  "--color-info-border-strong": "#003da0",
  "--color-info-border-subtle": "#bedfec",
  "--color-info-surface-active": "#cbe5f0",
  "--color-info-surface-default": "#ffffff",
  "--color-info-surface-hover": "#deeff5",
  "--color-info-surface-tinted": "#ebf5f9",
  "--color-info-text-default": "#002169",
  "--color-info-text-subtle": "#003da0",
  "--color-mint": "#cdece2",
  "--color-mint-light": "#e6f5f0",
  "--color-mint-lightest": "#f0f9f6",
  "--color-neutral-background-default": "#ffffff",
  "--color-neutral-background-tinted": "#f1f1f1",
  "--color-neutral-base-active": "#262626",
  "--color-neutral-base-contrast-default": "#ffffff",
  "--color-neutral-base-contrast-subtle": "#e6e6e6",
  "--color-neutral-base-default": "#333333",
  "--color-neutral-base-hover": "#2c2c2c",
  "--color-neutral-border-default": "#818181",
  "--color-neutral-border-strong": "#333333",
  "--color-neutral-border-subtle": "#e6e6e6",
  "--color-neutral-surface-active": "#e6e6e6",
  "--color-neutral-surface-default": "#ffffff",
  "--color-neutral-surface-hover": "#e6e6e6",
  "--color-neutral-surface-tinted": "#f1f1f1",
  "--color-neutral-text-default": "#333333",
  "--color-neutral-text-subtle": "#595959",
  "--color-orange": "#e8a74a",
  "--color-orange-light": "#f8e5c9",
  "--color-primary-background-default": "#ffffff",
  "--color-primary-background-tinted": "#ebf5f9",
  "--color-primary-base-active": "#00358a",
  "--color-primary-base-contrast-default": "#ffffff",
  "--color-primary-base-contrast-subtle": "#deeff5",
  "--color-primary-base-default": "#002169",
  "--color-primary-base-hover": "#003da0",
  "--color-primary-border-default": "#0047ba",
  "--color-primary-border-strong": "#003da0",
  "--color-primary-border-subtle": "#bedfec",
  "--color-primary-surface-active": "#cbe5f0",
  "--color-primary-surface-default": "#ffffff",
  "--color-primary-surface-hover": "#deeff5",
  "--color-primary-surface-tinted": "#ebf5f9",
  "--color-primary-text-default": "#002169",
  "--color-primary-text-subtle": "#003da0",
  "--color-red": "#c0385d",
  "--color-red-light": "#faedef",
  "--color-sky": "#bedfec",
  "--color-sky-light": "#deeff5",
  "--color-sky-lightest": "#ebf5f9",
  "--color-success-background-default": "#ffffff",
  "--color-success-background-tinted": "#f0f9f6",
  "--color-success-base-active": "#006448",
  "--color-success-base-contrast-default": "#ffffff",
  "--color-success-base-contrast-subtle": "#e6f5f0",
  "--color-success-base-default": "#008761",
  "--color-success-base-hover": "#007453",
  "--color-success-border-default": "#008761",
  "--color-success-border-strong": "#006448",
  "--color-success-border-subtle": "#cdece2",
  "--color-success-surface-active": "#cdece2",
  "--color-success-surface-default": "#ffffff",
  "--color-success-surface-hover": "#d7f0e8",
  "--color-success-surface-tinted": "#e6f5f0",
  "--color-success-text-default": "#00524c",
  "--color-success-text-subtle": "#006448",
  "--color-surface-active": "#cbe5f0",
  "--color-surface-default": "#ffffff",
  "--color-surface-hover": "#deeff5",
  "--color-surface-tinted": "#ebf5f9",
  "--color-text-default": "#002169",
  "--color-text-subtle": "#003da0",
  "--color-warning-background-default": "#ffffff",
  "--color-warning-background-tinted": "#fff5d2",
  "--color-warning-base-active": "#ac7c37",
  "--color-warning-base-contrast-default": "#333333",
  "--color-warning-base-contrast-subtle": "#333333",
  "--color-warning-base-default": "#e8a74a",
  "--color-warning-base-hover": "#c89040",
  "--color-warning-border-default": "#ac7c37",
  "--color-warning-border-strong": "#ac7c37",
  "--color-warning-border-subtle": "#f8e5c9",
  "--color-warning-surface-active": "#f8e5c9",
  "--color-warning-surface-default": "#ffffff",
  "--color-warning-surface-hover": "#f8e5c9",
  "--color-warning-surface-tinted": "#f8e5c9",
  "--color-warning-text-default": "#333333",
  "--color-warning-text-subtle": "#ac7c37",
  "--color-white": "#ffffff",
  "--color-yellow": "#fff5d2",
  "--container-gutter-width": "1rem",
  "--container-width": "92rem",
  "--font-display": "OBOSDisplay, __OBOSDisplay_Fallback, sans-serif",
  "--font-text": "OBOSText, __OBOSText_Fallback, sans-serif",
  "--percentage-0": "0",
  "--percentage-10": ".1",
  "--percentage-100": "1",
  "--percentage-15": ".15",
  "--percentage-20": ".2",
  "--percentage-25": ".25",
  "--percentage-30": ".3",
  "--percentage-35": ".35",
  "--percentage-40": ".4",
  "--percentage-45": ".45",
  "--percentage-5": ".05",
  "--percentage-50": ".5",
  "--percentage-55": ".55",
  "--percentage-60": ".6",
  "--percentage-65": ".65",
  "--percentage-70": ".7",
  "--percentage-75": ".75",
  "--percentage-80": ".8",
  "--percentage-85": ".85",
  "--percentage-90": ".9",
  "--percentage-95": ".95",
  "--percentage-translate-full": "1",
  "--radius-2xl": "1rem",
  "--radius-3xl": "1.5rem",
  "--radius-4xl": "2rem",
  "--radius-lg": "0.5rem",
  "--radius-md": "0.375rem",
  "--radius-sm": "0.25rem",
  "--radius-xl": "0.75rem",
  "--radius-xs": "0.125rem",
}
`;

exports[`typography > heading-l 1`] = `
[
  "font-family: OBOSDisplay, __OBOSDisplay_Fallback, sans-serif",
  "font-size: clamp(1.8125rem, 1.6667rem + 0.7292vw, 2.25rem)",
  "line-height: 1.5",
  "font-weight: 600",
  "letter-spacing: 0em",
]
`;

exports[`typography > heading-m 1`] = `
[
  "font-family: OBOSText, __OBOSText_Fallback, sans-serif",
  "font-size: clamp(1.4375rem, 1.375rem + 0.3125vw, 1.625rem)",
  "line-height: 1.5",
  "font-weight: 500",
  "letter-spacing: 0em",
]
`;

exports[`typography > heading-s 1`] = `
[
  "font-family: OBOSText, __OBOSText_Fallback, sans-serif",
  "font-size: clamp(1.1875rem, 1.1458rem + 0.2083vw, 1.3125rem)",
  "line-height: 1.5",
  "font-weight: 500",
  "letter-spacing: 0em",
]
`;

exports[`typography > heading-xl 1`] = `
[
  "font-family: OBOSDisplay, __OBOSDisplay_Fallback, sans-serif",
  "font-size: clamp(2.8125rem, 2.4375rem + 1.875vw, 3.9375rem)",
  "line-height: 1.5",
  "font-weight: 600",
  "letter-spacing: 0em",
]
`;

exports[`typography > heading-xs 1`] = `
[
  "font-family: OBOSText, __OBOSText_Fallback, sans-serif",
  "font-size: clamp(1.125rem, 1.1042rem + 0.1042vw, 1.1875rem)",
  "line-height: 1.5",
  "font-weight: 500",
  "letter-spacing: 0em",
]
`;

exports[`typography > lead 1`] = `
[
  "font-size: clamp(1.4375rem, 1.375rem + 0.3125vw, 1.625rem)",
  "line-height: 1.5",
  "font-weight: 500",
  "letter-spacing: 0em",
]
`;

exports[`typography > lead-sm 1`] = `
[
  "font-size: clamp(1.1875rem, 1.125rem + 0.3125vw, 1.375rem)",
  "line-height: 1.5",
  "font-weight: 400",
  "letter-spacing: 0em",
]
`;
